# DeepScientist

./: .gitignore  .npmignore  AGENTS.md  CITATION.cff  CLAUDE.md  README.md  README_ZH.md  TRADEMARK.md  package-lock.json  package.json  pyproject.toml
docs/: RUNTIME_FLOW_AND_CANVAS.md
maintenance-logs/: FEISHU_CONNECTOR_ENABLEMENT_LOG.md  FEISHU_CONNECTOR_ENABLEMENT_LOG.zh.md  TELEGRAM_CONNECTOR_ENABLEMENT_LOG.md  TELEGRAM_CONNECTOR_ENABLEMENT_LOG.zh.md  WEB_I18N_REFACTOR_LOG.md  WEB_I18N_REFACTOR_LOG.zh.md  WHATSAPP_CONNECTOR_ENABLEMENT_LOG.md  WHATSAPP_CONNECTOR_ENABLEMENT_LOG.zh.md  WINDOWS_ADAPTATION_LOG.md  WINDOWS_ADAPTATION_LOG.zh.md
scripts/: build-release.mjs  capture_settings_docs_screenshots.sh  dedupe_quest_worktree_cold_files.py  fill_missing_aisb_markdown.py  fill_missing_aisb_markdown_fast.py  generate_autosota_images.py  package_and_upload_aisb_release.py  process_aisb_papers.py  record-demo-videos.mjs  rewrite_aisb_yaml_with_claude.py  rewrite_aisb_yaml_with_claude_code.py  rewrite_aisb_yaml_with_claude_retry.py  run_admin_e2e.sh  run_claude_code_yaml_batch.py  run_claude_code_yaml_retry.py  run_copilot_agent_queue_e2e.sh  run_copilot_workspace_e2e.sh  run_git_diff_e2e.sh  run_lab_canvas_e2e.sh  run_mineru_only_retry.py  run_settings_control_center_e2e.sh  run_terminal_workspace_e2e.sh  run_workspace_tooltip_e2e.sh  setup_admin_e2e_fixture.py  setup_copilot_workspace_e2e_fixture.py  setup_settings_docs_e2e_fixture.py  slim_quest_oversized_jsonl.py
tests/: launcher_uv.test.cjs  test_acp_api.py  test_admin_api.py  test_admin_tasks.py  test_doctor.py  (+23 more)
(+574 files in other folders)
